--- a/report.html
+++ b/report.html
@@ -370,15 +370,15 @@ pre code {
 </div>
 
 
-<pre class="r"><code>FishFraud &lt;- read.csv(&quot;Fish Fraud Data CSV.csv&quot;)
+<pre class="r"><code>FishFraud &lt;- read.csv(&quot;Fish Fraud Data CSV.csv&quot;) #loaded the csv file of the raw data into r 
 
 
-TidyFishFraud &lt;- select(FishFraud, -Fraud.map.category, -Notes, -repeat., -Species.Geographic.Range, -Amount.of.processing, -Website, -Reference, -In.fraud.map., -In.endnote., -Fraud.Map.ID., -Potentially.Farmed., -farmed.n, -X, -X.1, -X.2, -X.3, -X.4, -X.5, -X.6, -X.7, -X.8)
+TidyFishFraud &lt;- select(FishFraud, -Fraud.map.category, -Notes, -repeat., -Species.Geographic.Range, -Amount.of.processing, -Website, -Reference, -In.fraud.map., -In.endnote., -Fraud.Map.ID., -Potentially.Farmed., -farmed.n, -X, -X.1, -X.2, -X.3, -X.4, -X.5, -X.6, -X.7, -X.8) #i removed these columns as i determined that they were either irrelevant to what I wanted to asnwer, or there wasnt enough data in these columns to do anything with it 
 
 TidyFishFraud &lt;- filter(
   TidyFishFraud, 
   !is.na(Study.number)
-)
+) #here I am removing all the rows that contain an NA under the study.number column. 
 
 glimpse(TidyFishFraud)</code></pre>
 <pre><code>## Rows: 977
